--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -22,7 +22,7 @@
             freedom in design and quick prototyping.
         </p>
 
-        <h2>Using the greeting service</h2>
+        <h2>Yo, Using the greeting service</h2>
         
         <form class="form-inline">
             <div class="form-group">
